--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
       sizes="32x32"
       href="img/favicon-16x16.png"
     />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="img/apple-touch-icon.png"
+    />
 
-    <link rel="manifest" href="/site.webmanifest" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#44c8f5" />
+    <link rel="manifest" href="img/site.webmanifest" />
+    <link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#44c8f5" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#44c8f5" />
   </head>
@@ -36,16 +40,56 @@
       </p>
     </header>
     <h2>
-      Heading 2
+      table
     </h2>
+    <table>
+      <tr>
+        <th>Country</th>
+        <th>Capital</th>
+        <th>Population</th>
+        <th>Language</th>
+      </tr>
+      <tr>
+        <td>USA</td>
+        <td>Washington,D.C</td>
+        <td>309 million</td>
+        <td>English</td>
+      </tr>
+      <tr>
+        <td>Sweden</td>
+        <td>Stockholm</td>
+        <td>9 million</td>
+        <td>Swedish</td>
+      </tr>
+      <tr>
+        <td>France</td>
+        <td>Paris</td>
+        <td>10 million</td>
+        <td>French</td>
+      </tr>
+      <tr>
+        <td>Germany</td>
+        <td>Berlin</td>
+        <td>9 milliion</td>
+        <td>German</td>
+      </tr>
+    </table>
+
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. This is a
       <a href="test.com">standard link</a> distinctio facilis excepturi,
       reprehenderit pariatur odit, velit mollitia saepe impedit reiciendis omnis
       quasi sed, facere quo nobis a blanditiis.
     </p>
+    <figure>
+      <img
+        src="img/yawning-cat.jpeg"
+        alt="This is a picture of a yawning cat"
+      />
+      <figcaption>Yawning cat. Photo by Martia Misar</figcaption>
+    </figure>
     <h3>
-      Heading 3
+      To get you started
     </h3>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. This is a
