--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#44c8f5" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#44c8f5" />
+    <link rel="stylesheet" href="css/screen.css" />
   </head>
   <body>
     <header>
