--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#44c8f5" />
     <link rel="stylesheet" href="css/screen.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
   </head>
   <body>
     <header>
