Added default typography styles

--- a/index.html
+++ b/index.html
@@ -111,6 +111,20 @@
     <h3>
       Styling lists is easy
     </h3>
+    <ul>
+      <li>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit,
+        accusantium?
+      </li>
+      <li>
+        Nobis magni provident temporibus, asperiores harum reiciendis laborum
+        nulla iusto.
+      </li>
+      <li>
+        Esse officiis fugiat eveniet error aliquid? Consectetur distinctio
+        cumque perspiciatis!
+      </li>
+    </ul>
     <p>
       Add an unorderd list with 3 list items here
     </p>
