Updated Table style

--- a/index.html
+++ b/index.html
@@ -41,11 +41,24 @@
         100s of developers, all in one little package.
       </p>
     </header>
+    <h2 id="heading2">
+      <a href="#heading2">Heading 2 </a>
+    </h2>
+    <h2 id="heading3">
+      <a href="#heading3">Heading 3 </a>
+    </h2>
+    <h2 id="lists">
+      <a href="#lists">Lists3 </a>
+    </h2>
+    <h2 id="table">
+      <a href="#table">table </a>
+    </h2>
+
     <h2>
       table
     </h2>
     <table>
-      <tr>
+      <tr class="odd">
         <th>Country</th>
         <th>Capital</th>
         <th>Population</th>
